# Intelligent-Traffic-Sign-Recognition-Service-API

./: README.md  bluk_prediction.py  main.py  model_traning.py  pyproject.toml  single_img_prediction.py  util.py
